# colab-gsoc2018-PushkalKatara

./: .gitignore  README.md
configs/: config.py
core/: namespace.py  state.py  transition.py
examples/ros/obstacleAvoidancePython/: CMakeLists.txt  obstacleAvoidancePython.py  package.xml
examples/ros/obstacleAvoidancePython/gui/: visualstates.py
examples/ros/obstacleAvoidancePython/gui/dialogs/: jderobotcommconfigdialog.py
examples/ros/obstacleAvoidancePython/gui/tree/: treemodel.py
generators/: pythonrosgenerator.py
gui/: visualstates.py
gui/automata/: automatascene.py  optype.py
gui/dialogs/: rosconfigdialog.py
gui/tree/: treemodel.py
parsers/: filemanager.py  importmanager.py
