<?xml version="1.0" ?>
<package>
  <name>obstacleAvoidancePython</name>
  <version>0.0.0</version>
  <description>The obstacleAvoidancePython package</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO (choose one: BSD, MIT, GPLv2, GPLv3 LGPLv3)</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>python-qt5-bindings</run_depend>
  <export/>
</package>
